<resources>
    <string name="app_name">Medicus Academicus</string>

    <!-- Strings related to login -->
    <string name="prompt_patient_email">E-mail</string>
    <string name="prompt_password">Parola (CNP)</string>
    <string name="button_sign_in_text">Autentificare</string>
    <string name="error_invalid_email">Introduceți un e-mail valid</string>
    <string name="error_invalid_password">Parola trebuie să conțină 13 cifre</string>
    <string name="error_incorrect_login_data">Datele tale nu sunt corecte</string>
    <string name="error_field_required">Acest câmp este obligatoriu</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- Strings related to menu -->
    <string name="button_patient_condition">Stare pacient</string>
    <string name="button_patient_recommendations">Recomandări medic</string>
    <string name="menu_welcome_message">Bine ați venit</string>
    <string name="button_sign_out_text">Deconectare</string>
    <string name="button_start_acc">Start accelerometru</string>

    <!-- Strings related to Sign Out alert dialog -->
    <string name="sign_out_dialog_message">Sunteți sigur că doriți să vă deconectați?</string>
    <string name="sign_out_dialog_pos_button">Da</string>
    <string name="sign_out_dialog_neg_button">Nu</string>

    <!-- Strings related to patient condition -->
    <string name="label_temperature">Temperatură:</string>
    <string name="label_humidity">Umiditate:</string>
    <string name="label_pulse">Puls:</string>
    <string name="label_EKG">EKG:</string>

    <string name="back_butt_content_text">Înapoi</string>

    <!-- Strings related to calendar -->
    <string name="recommendations_popup_title">Recomandări</string>
    <string name="recommendations_popup_pos_button">OK</string>
</resources>
