<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ro.academicus.medicus.medicusacademicus1_0.MenuActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="top|end"
            android:onClick="signOut"
            android:text="@string/button_sign_out_text" />

        <TextView
            android:id="@+id/welcome_text_view"
            android:layout_width="match_parent"
            android:layout_height="122dp"
            android:gravity="center"
            android:text="@string/menu_welcome_message"
            android:textSize="@dimen/welcome_message_dimens" />

        <Button
            android:id="@+id/button_patient_condition"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_patient_condition"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_recommendations"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_patient_recommendations"
            android:textStyle="bold" />

    </GridLayout>

</RelativeLayout>
